--- a/FitnessTracker.Web/Views/Shared/_Layout.cshtml
+++ b/FitnessTracker.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Workout" asp-action="Add">Workout</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Workout" asp-action="Index">Workout</a>
                         </li>
                     </ul>
                 </div>
