--- a/FitnessTracker.Web/Views/Shared/_Layout.cshtml
+++ b/FitnessTracker.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Workout" asp-action="Index">Workout</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Create">Category Create</a>
+                        </li>
                     </ul>
                 </div>
             </div>
